# task

./: CMakeLists.txt  LICENSE  README.md  Todo.md
examples/: CMakeLists.txt  children_tasks.cpp  parallel_for.cpp  printing.cpp  simple.cpp  store_data.cpp  store_pointer_to_array.cpp  store_pointer_to_data.cpp
include/: task.hpp
include/task/: task.hpp  task.inl
tests/: CMakeLists.txt  test_main.cpp
